# small_riscv_qemu_program

./: CMakeLists.txt  README.md  main.c  riscv64-virt.ld
